[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/Level Menu.gd" type="Script" id=1]

[node name="Level Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 601.0
color = Color( 0.25098, 0.368627, 0.203922, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -34.0
margin_right = 68.0
margin_bottom = 34.0

[node name="Level 1" type="Button" parent="VBoxContainer"]
margin_right = 136.0
margin_bottom = 20.0
text = "Level 1"

[node name="Level 2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 136.0
margin_bottom = 44.0
text = "Level 2"

[node name="Level 3" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 136.0
margin_bottom = 68.0
text = "Level 3"

[node name="Back to Home" type="Button" parent="."]
margin_left = 20.0
margin_top = 30.0
margin_right = 122.0
margin_bottom = 50.0
text = "Back to Home"

[connection signal="pressed" from="VBoxContainer/Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="Back to Home" to="." method="_on_Back_to_Home_pressed"]
